fix/text-alignment

--- a/src/App.css
+++ b/src/App.css
@@ -55,8 +55,10 @@
   border-radius: 5px;
   color: white;
   background-color: #f44336;
-  
+  text-align: right;
 }
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
